# dipoleview

./: .gitignore  LICENSE  README.md  pyproject.toml
dipoleview/: projection.py  smooth.py  viewer.py
dipoleview/templates/: style.css  viewer.html  viewer.js
examples/: 01_galactic.py  01_viewer.py  02_equatorial.py  03_countmap.py  04_session.py  05_array_mask.py
