[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dipoleview"
version = "0.1.0"
description = "Interactive HEALPix sky viewer and mask editor for source-count maps."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mali Land-Strykowski"},
]
keywords = ["cosmology", "healpix", "sky-map", "mask", "dipole", "visualisation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.24",
    "healpy>=1.16",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "astropy>=5.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
examples = ["dipoletools"]

[project.urls]
Homepage = "https://github.com/strykowski-lab/dipoleview"
Repository = "https://github.com/strykowski-lab/dipoleview"
Issues = "https://github.com/strykowski-lab/dipoleview/issues"

[tool.setuptools.packages.find]
include = ["dipoleview*"]
